# lamark

./: .gitignore  ChangeLog.md  LICENSE  README.md  lamark.cabal  stack-ghc-8.2.2.yaml
app/: anative.hs
