--
-- cabal fle for lamark library and executables
--
name:           lamark
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/sebeaumont/lamark#readme>
homepage:       https://github.com/sebeaumont/lamark#readme
bug-reports:    https://github.com/sebeaumont/lamark/issues
author:         Simon Beaumont
maintainer:     datalligator@icloud.com
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/sebeaumont/lamark

library
  hs-source-dirs:
                 src
  build-depends:
                base >=4.7 && <5
              
  exposed-modules:
                                             
  ghc-options: -O2 -Wall
  default-language: Haskell2010

  
executable ablas
  main-is: ablas.hs
  hs-source-dirs: app
  ghc-options:
              -O2 -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-n2M -with-rtsopts=-A64M
  build-depends:
                base >=4.7 && <5
              , lamark
              , accelerate
              , accelerate-blas
              , accelerate-llvm
              , accelerate-llvm-native

  default-language: Haskell2010

executable anative
  main-is: anative.hs
  hs-source-dirs: app
  ghc-options:
              -O2 -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-n2M -with-rtsopts=-A64M
  build-depends:
                base >=4.7 && <5
              , lamark
              , accelerate
              , accelerate-llvm
              , accelerate-llvm-native

  default-language: Haskell2010

  